# python-devjracademy-v1

class-1/: main.py
class-2/: main.py  notebook.ipynb  notebook.ipynp
class-3/: main.py  notebook.ipynb
class-4/: main.py
class-5/: main.py  notebook.ipynb
class-7/: index.py  main.py  pyproject.toml  script.py
class-8/: main.py  poo_01.py  poo_02.py  poo_03.py
class-9/: challenge.txt  main.py
