[tool.poetry]
name = "class-7"
version = "0.1.0"
description = ""
authors = ["Luiz Cruz <luizcruzdev@gmail.com>"]
readme = "README.md"
packages = [{include = "class_7"}]

[tool.poetry.dependencies]
python = "^3.9"
cowsay = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
